--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "1.0.0-beta.6",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "daisyui": "^3.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
@@ -22,11 +26,14 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.15.0"
   }
 }
