--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^3.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "minisearch": "^6.1.0",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
