--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "daisyui": "^3.1.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "minisearch": "^6.1.0",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.13.1",
@@ -33,6 +35,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.15.0"
