--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
+    "@hookform/resolvers": "^3.1.1",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -29,6 +30,7 @@
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.13.1",
