--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "ddal-next13",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@formkit/auto-animate": "1.0.0-beta.6",
-    "@hookform/resolvers": "^3.1.1",
-    "@mdi/js": "^7.2.96",
-    "@mdi/react": "^1.6.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.15.0",
-    "@types/node": "20.3.0",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
-    "daisyui": "^3.1.0",
-    "dayjs": "^1.11.8",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "minisearch": "^6.1.0",
-    "next": "13.4.5",
-    "next-auth": "^4.22.1",
-    "postcss": "8.4.24",
-    "qs": "^6.11.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-markdown": "^8.0.7",
-    "remark-gfm": "^3.0.1",
-    "tailwind-merge": "^1.13.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@types/qs": "^6.9.7",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.15.0"
-  }
+	"name": "ddal-next13",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@formkit/auto-animate": "1.0.0-beta.6",
+		"@hookform/resolvers": "^3.1.1",
+		"@mdi/js": "^7.2.96",
+		"@mdi/react": "^1.6.1",
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@prisma/client": "^4.15.0",
+		"@types/node": "20.3.0",
+		"@types/react": "18.2.12",
+		"@types/react-dom": "18.2.5",
+		"autoprefixer": "10.4.14",
+		"daisyui": "^3.1.0",
+		"dayjs": "^1.11.8",
+		"eslint": "8.42.0",
+		"eslint-config-next": "13.4.5",
+		"minisearch": "^6.1.0",
+		"next": "13.4.5",
+		"next-auth": "^4.22.1",
+		"postcss": "8.4.24",
+		"qs": "^6.11.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.44.3",
+		"react-markdown": "^8.0.7",
+		"remark-gfm": "^3.0.1",
+		"tailwind-merge": "^1.13.1",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.1.3",
+		"zod": "^3.21.4"
+	},
+	"devDependencies": {
+		"@types/qs": "^6.9.7",
+		"prettier": "^2.8.8",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"prisma": "^4.15.0"
+	}
 }
