--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
+		"@types/node": "18.0.0",
 		"@types/qs": "^6.9.7",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
