--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"lint": "next lint",
 		"postinstall": "prisma generate"
 	},
+	"engines": {
+		"node": ">=18.0.0"
+	},
 	"dependencies": {
 		"@formkit/auto-animate": "1.0.0-beta.6",
 		"@hookform/resolvers": "^3.1.1",
