--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
 		"tailwind-merge": "^1.13.1",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
-		"valibot": "^0.8.0",
-		"zod": "^3.21.4"
+		"valibot": "^0.8.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.0.0",
